<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">奈子貓QRcode掃描</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <!--<string name="google_maps_key">AIzaSyCbDx5xGvCsNlwLvldQtfK73_JcY0nmmOM</string>-->

    <string name="big_clock_12_hours_format" translatable="false">hh:mm</string>
    <string name="big_clock_24_hours_format" translatable="false">kk:mm</string>

    <string name="date_format">yyyy-MMMM-dd日-EEE</string>

    <string name="information">相關資訊</string>
    <string name="advertisement">星座運勢</string>
    <string name="weather">天氣預報</string>
    <string name="latest">最新活動</string>
    <string name="banner_ad_unit_id">ca-app-pub-3292683586980860~3918083030</string>
    <string name="banner_ad_unit_id1">ca-app-pub-3292683586980860/2226136533</string>
    <string name="banner_ad_unit_id2">ca-app-pub-3292683586980860/1155477880</string>
    <string name="test">ca-app-pub-3940256099942544/6300978111</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


    <string name="show_btn">show</string>
    <string name="camera_shortcut_long_label1">Camera</string>
    <string name="camera_shortcut_short_label1">Camera</string>
    <string name="map_shortcut_short_label1">Map</string>
    <string name="map_shortcut_long_label1">Map</string>
    <string name="chart_shortcut_short_label1">Chart</string>
    <string name="chart_shortcut_long_label1">Chart</string>
    <string name="setting_shortcut_short_label1">Setting</string>
    <string name="setting_shortcut_long_label1">Setting</string>
    <string name="shortcut_test">Shortcut test ***</string>
    <string name="show_contacts">show contacts</string>

    <string name="play">PLAY</string>
    <string name="pause">Pause</string>


    <string name="mon">週一</string>
    <string name="tue">週二</string>
    <string name="wed">週三</string>
    <string name="thu">週四</string>
    <string name="fri">週五</string>
    <string name="sat">週六</string>
    <string name="sun">週日</string>
    <string name="cycle_sure">確定</string>
    <string name="vibration">震動</string>
    <string name="ring">鈴聲</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap to speak</string>
    <string name="tap_to_play">Tap to Play</string>
</resources>
