<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rrr"
    android:layout_width="match_parent"
    android:layout_height="180dp">


    <ImageView
        android:id="@+id/imv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp" />

    <LinearLayout
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/weatherfuture"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:visibility="gone">


        <TextView
            android:id="@+id/temperatureday1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0/0C"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/temperatureday2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0/0C"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/temperatureday3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0/0C"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/temperatureday4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0/0C"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/temperatureday5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0/0C"
            android:textColor="#ffffff"
            android:textSize="12dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/progressBara"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:visibility="gone">


        <TextView
            android:id="@+id/day1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="T"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/day2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="T+1"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/day3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="T+2"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/day4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="T+3"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/day5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="T+4"
            android:textColor="#ffffff"
            android:textSize="12dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/weatherfuture"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/imv"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="23dp"
        android:orientation="horizontal"
        android:visibility="gone">


        <ImageView
            android:id="@+id/weatherday1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/weatherday2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/weatherday3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/weatherday4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/weatherday5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_camera" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imv"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imv"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextClock
            android:id="@+id/textclock"
            style="@style/text_regular_bold_48sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/progressBara"
            android:layout_alignEnd="@+id/progressBara"
            android:layout_alignRight="@+id/progressBara"
            android:format12Hour="@string/big_clock_12_hours_format"
            android:format24Hour="@string/big_clock_24_hours_format"
            android:textColor="#ffffff"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextClock
            android:id="@+id/textdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textclock"
            android:layout_alignStart="@+id/textclock"
            android:layout_below="@+id/textclock"
            android:format12Hour="@string/date_format"
            android:format24Hour="@string/date_format"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textdate"
            android:layout_alignStart="@+id/textdate"
            android:layout_centerVertical="true"
            android:layout_marginTop="3dp"
            android:ems="7"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressBara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="台灣"
            android:textColor="#ffffff" />

    </LinearLayout>


</RelativeLayout>